<resources>
    <string name="app_name">MVPloginS</string>
    <string name="ethiohero">Ethiopian unforgotable heros</string>
    <string name="balcha">
        Dejazmatch Balcha Abanefso; An Ethiopian hero at the Battle of Adwa, 1896
        Dejazmatch Balcha was known by his horse name of "Aba Nefso".
        Taken captive in battle as a boy, the young Oromo was raised at the Palace of Menelik II, and regarded the Emperor
        as his father. He was devotedly loyal to Menelik, and served him as a regional governor in various southern provinces
        including Sidamo and Harrar as well as one of his leading military commanders. He was a hero of the battle
        of Adwa in 1896. After the death of Menelik II, he was disaffected by the behavior of Lij Iyasu and supported
        his deposition.He was freed from his detention by Emperor Haile Selassie when the Emperor departed on the eve
        of the fall of Addis Ababa to the fascist Italian forces, and valiantly fought the
        Italians as a guerilla leader in 1936-1937 when he was killed.


    </string>
    <string name="abune">
        Abune Petros was born in Fitche, north of Addis Ababa, under the name  Magarsa Badhasa.
        He decided to follow religious studies and at the age of 24 years, he became a monk.
        Later, he taught in the monasteries in Fitche.
        In 1935, Italian troops invaded Ethiopia. Aboune Petros went with Emperor Haile Selassie I at the northern war front
        where he assisted the wounded. He attended the violence used by the fascists in particular against civilians.
        Following the Italian victory at the Battle of Maychew, Ethiopian Patriots fold to areas in the south and Abune Petros
        went to the Monastery of Debre Libanos. He used to question the ongoing war as, how Italy, a Christian country,
        would occupy in such a brutal manner another Christian peaceful country, Ethiopia?
        Aware of his popularity, the Italians, with the help of priests, sent letters to him to the change of camp by
        offering a peaceful life in a sumptuous residence in the capital. Aboune Petros hastened to refuse.
        During his last speech, he said:
        "My countrymen, do not believe the fascists telling you that the Patriots are bandits, the Patriots are people who
        are fighting to free us from the terror of fascism. Bandits are the soldiers who are in front of me and you,
        who have come from far, terrorize and violently occupy a weak and peaceful country: our Ethiopia.
        God gives to the people of Ethiopia the strength to resist and never bow to the Fascist army and its violence.
        An Ethiopian land can never accept the orders of the invading army. Land of Ethiopia;
        I condemn you if you accept such an invasion.".
        Shortly after, Abuna Petros was made to sit on a chair and shot with bullets by many Italian soldiers.
         A memorial statue is erected in 1946 near St. George's Cathedral, Addis Ababa and the author
        Tsegaye Gebre-Medhin wrote a play on his last days.

    </string>
    <string name="abdisa">
        An Oromo man who led the capture of Rome and Berin in 2nd world war
        Today in history, Abdisa Aga was taken as a prisoner of war from his country in 1936 to the island of Sicily,
        Italy and allegedly penetrated the prison camp and fled to the woods with ammunition and trucks full of supplies
        in the heart of Italy. The Italian govt did all it could to catch him. Abdisa helped free prisoner and they
        battled the Italians fiercely. During the 2nd world war the Allied force, Britain, USA, France and Russia recognized
        Abdisa Aga and the rest of the partisan and supplied them with arms and provisions.
        Major General Abdisa was chosen to lead the i international partisan army which consisted of Americans, French, English,
        Ethiopians and other nationals. This way the partisan weekend the Italian army and contributed their defeat.

    </string>
    <string name="loret">
    Laureate Tsegaye Gebremedhin
        Belatengeta —Poet Laureate—Tsegaye Gabre-Medhin,
        is Ethiopia’s premier versatile and prolific man of letters. For half a century now he has been continuously productive
        as poet, playwright, essayist, social critic, philologist, historiographer, dramatist, synthesist, peace activist,
        artistic director…on matters national, continental and global. Even if he has yet to be awarded the
        Nobel Prize for Literature, he has often been more appreciated and duly honored abroad than in his own land.
        Perhaps this is in keeping with that old Ethiopian saying to the effect that ‘a prophet is often not esteemed in his own
        country.’ In this day and age, when most of us have been preoccupied and indeed consumed by wars and rumors of wars in
        Ethiopia-Eritrea and elsewhere in the Horn of Africa, it seems as though there is nothing else of positive
        value or of grave concern that deserves or commands the attention of Ethiopians. Today we shall take time out
        from violence and war and reflect on the life and works of Poet Laureate Tsegaye Gabre-Medhin who is a living legend,
        a literary hero, and as one observer described him recently, Ethiopia’s “biblical sage”.
    </string>
</resources>
