<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.mvplogins.k.mvplogins.activities.IntentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:paddingTop="@dimen/mar"
            android:paddingRight="@dimen/mar"
            android:paddingBottom="@dimen/mar"
            android:paddingLeft="@dimen/mar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/top"
            android:layout_marginBottom="@dimen/top"
            android:textStyle="bold"
            android:textColor="@color/top"
            android:textSize="25sp"

            android:text="@string/ethiohero" >
        </TextView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/top"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/image1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:src="@mipmap/balcha" />


            <TextView
                android:paddingTop="@dimen/mar"
                android:paddingRight="@dimen/mar"
                android:paddingBottom="@dimen/mar"
                android:paddingLeft="@dimen/mar"
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:background="@color/text"
                android:text="@string/balcha" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/image2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:src="@mipmap/abdisa" />

            <TextView
                android:paddingTop="@dimen/mar"
                android:paddingRight="@dimen/mar"
                android:paddingBottom="@dimen/mar"
                android:paddingLeft="@dimen/mar"
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:text="@string/abdisa" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:src="@mipmap/abune" />

            <TextView
                android:paddingTop="@dimen/mar"
                android:paddingRight="@dimen/mar"
                android:paddingBottom="@dimen/mar"
                android:paddingLeft="@dimen/mar"
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/text"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:text="@string/abune" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="horizontal">


            <ImageView
                android:id="@+id/image4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:src="@mipmap/loret" />

            <TextView
                android:paddingTop="@dimen/mar"
                android:paddingRight="@dimen/mar"
                android:paddingBottom="@dimen/mar"
                android:paddingLeft="@dimen/mar"
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/text"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:text="@string/loret" />
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
